# mvsdk

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/api/: mvapi.h
code/cgame/: CMakeLists.txt  cg_consolecmds.c  cg_dbcmds.c  cg_dbcmds.h  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_main.c  cg_newDraw.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_saga.c  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_syscalls.asm  cg_syscalls.c  cg_view.c  cg_weaponinit.c  cg_weapons.c
code/game/: CMakeLists.txt  ai_main.c  ai_main.h  ai_wpnav.c  anims.h  bg_defrag_global.c  bg_defrag_global.h  bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_multiversion.c  bg_panimate.c  bg_pmove.c  bg_public.h  bg_saber.c  bg_saberLoad.c  bg_saga.c  bg_saga.h  bg_slidemove.c  bg_weapons.h  g_active.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_dbcmds.c  g_dbcmds.h  g_defrag.c  g_defrag.h  g_items.c  g_local.h  g_main.c  g_misc.c  g_missile.c  g_mover.c  g_multiversion.c  g_multiversion.h  g_object.c  g_public.h  (+18 more)
code/qcommon/: crypt_blowfish.c  crypt_blowfish.h  levenshtein.c  levenshtein.h  qfiles.h
code/ui/: CMakeLists.txt  menudef.h  ui_atoms.c  ui_force.c  ui_gameinfo.c  ui_local.h  ui_main.c  ui_public.h  ui_saber.c  ui_shared.c  ui_shared.h  ui_syscalls.asm  ui_syscalls.c
code/ui_eternal/: CMakeLists.txt
code/ui_eternal/cgame/: animtable.h
code/ui_eternal/game/: anims.h  bg_local.h  bg_misc.c  bg_public.h  bg_saberLoad.c  bg_saga.c  bg_vehicleLoad.c  bg_vehicles.h
code/ui_eternal/qcommon/: q_platform.h  q_shared.h
code/ui_eternal/qcommon/safe/: gsl.h
code/ui_eternal/rd-common/: tr_types.h
code/ui_eternal/ui/: menudef.h  ui_gameinfo.c  ui_local.h  ui_main.c  ui_public.h  ui_saber.c  ui_shared.c  ui_shared.h  ui_syscalls.c  ui_xcvar.h
tools/asm/: cmdlib.c  cmdlib.h  q3asm.c
tools/qcommon/: qfiles.h
